# ima-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agent-context/: ARCHITECTURE.md  CONVENTIONS.md  CURRENT_STATE.md  DECISIONS.md  GLOSSARY.md  LESSONS.md  OPEN_QUESTIONS.md  PROJECT.md  README.md  SESSION_CHECKLIST.md
alembic/: env.py
alembic/versions/: 20260417_001_initial_agent_runs.py  20260417_002_creators_base.py  20260417_003_creator_growth.py  20260417_004_evidence_items.py  20260417_005_week2_spec_alignment.py  20260417_006_drop_legacy_columns.py  20260417_007_restore_numeric_score_columns.py  20260418_008_expand_agent_run_statuses.py  20260418_009_add_agent_run_reserved_budget.py  20260418_010_week3_brand_foundation.py
config/: scoring.default.yaml
config/niches/: productivity.yaml  tech.yaml
config/seeds/: productivity_brands.yaml  tech_brands.yaml
scripts/: db_migrate.py  smoke_test.py
src/ima/: __init__.py  config.py  logging.py
tests/: __init__.py  conftest.py
tests/agents/: test_classifier_golden_set.py  test_evidence_builder_golden_set.py  test_executor.py
tests/brands/: test_enricher.py  test_seeder.py  test_service.py  test_spend_intent.py
tests/creators/: test_cli_helpers.py  test_discovery_niche.py  test_ingest.py  test_scoring.py  test_scoring_functions.py
tests/db/: test_models.py
tests/evidence/: test_brand_builder.py  test_builder.py
tests/fixtures/: creator_ingest_example.json  creator_ingest_temporal_run.json  creator_source_batch.json
tests/niches/: test_registry.py
(+79 files in other folders)
