[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ima-platform"
version = "0.1.0"
description = "Week-1 foundation for the internal Influencer Marketing Agency pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "anthropic>=0.40",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "jinja2>=3.1",
  "langfuse>=2.50",
  "openai>=1.50",
  "pydantic>=2.6",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "structlog>=24.1",
  "tenacity>=8.2",
  "typer>=0.12",
]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.4",
]

[project.scripts]
ima = "ima.cli.run_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ima"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = []
